Documentation and tests update
Updated documentation of new code to meet contribution requirements. Updated tests to reflect minor changes in code. Updated formatting to meet tox requirements.

--- a/examples/Demo_08_GoF_Scores.ipynb
+++ b/examples/Demo_08_GoF_Scores.ipynb
@@ -54,13 +54,13 @@
     "            # the last item\n",
     "            if type(val) == h5py._hl.group.Group:\n",
     "                print(pre + '└── ' + key)\n",
-    "                h5_tree(val, pre+'    ')\n",
+    "                h5_tree(val, pre + '    ')\n",
     "            else:\n",
     "                print(pre + '└── ' + key + f' {val.shape}')\n",
     "        else:\n",
     "            if type(val) == h5py._hl.group.Group:\n",
     "                print(pre + '├── ' + key)\n",
-    "                h5_tree(val, pre+'│   ')\n",
+    "                h5_tree(val, pre + '│   ')\n",
     "            else:\n",
     "                print(pre + '├── ' + key + f' {val.shape}')"
    ]
@@ -169,7 +169,7 @@
    ],
    "source": [
     "# We extract one pair of time histories from the datasets\n",
-    "ix = 0 # ix = 0 ... 4 (you can change this to compare different time series)\n",
+    "ix = 0  # ix = 0 ... 4 (you can change this to compare different time series)\n",
     "y_true = data_true[ix, :]\n",
     "y_model = data_model[ix, :]\n",
     "\n",
@@ -177,9 +177,9 @@
     "fmin = 1.0\n",
     "fmax = 15.0\n",
     "\n",
-    "dt = 0.01 # Time step is 0.01s\n",
+    "dt = 0.01  # Time step is 0.01s\n",
     "T = y_true.shape[0]\n",
-    "t_array = (dt)*np.arange(1, T+1)\n",
+    "t_array = (dt) * np.arange(1, T + 1)\n",
     "\n",
     "# Create GOF_Scores object\n",
     "# Each input numpy array should have two columns, where the\n",
@@ -190,8 +190,7 @@
     "myScore = GOF_Scores(measurement, simulation)\n",
     "\n",
     "# Calculate scores and plot\n",
-    "score = myScore.calc_scores(fmin=fmin, fmax=fmax,  \n",
-    "                        show_fig=True, verbose=True)"
+    "score = myScore.calc_scores(fmin=fmin, fmax=fmax, show_fig=True, verbose=True)"
    ]
   },
   {
@@ -300,9 +299,9 @@
     "scoreList = []\n",
     "\n",
     "# Time array corresponding to the data\n",
-    "dt = 0.01 # Time step is 0.01s\n",
-    "T = 10000 # Length of each time series\n",
-    "t_array = (dt)*np.arange(1, T+1)\n",
+    "dt = 0.01  # Time step is 0.01s\n",
+    "T = 10000  # Length of each time series\n",
+    "t_array = (dt) * np.arange(1, T + 1)\n",
     "\n",
     "# Load hdf5 dataset\n",
     "with h5py.File(f'SSA_GANO_FNO_PySSL.h5', 'r') as hf:\n",
@@ -312,8 +311,12 @@
     "    # Set up multiple score objects\n",
     "    for ind in range(5):\n",
     "        # Here we are loading each time series from the hdf5 file individually as we need it\n",
-    "        measurement = np.column_stack((t_array, hf[f'reverse_M7_rrup_12/GANO_PySeismoSoil'][ind, :]))\n",
-    "        simulation = np.column_stack((t_array, hf[f'reverse_M7_rrup_12/GANO_FNO'][ind, :]))\n",
+    "        measurement = np.column_stack(\n",
+    "            (t_array, hf[f'reverse_M7_rrup_12/GANO_PySeismoSoil'][ind, :])\n",
+    "        )\n",
+    "        simulation = np.column_stack(\n",
+    "            (t_array, hf[f'reverse_M7_rrup_12/GANO_FNO'][ind, :])\n",
+    "        )\n",
     "\n",
     "        # Create score object\n",
     "        score_obj = GOF_Scores(measurement, simulation)\n",
@@ -325,10 +328,11 @@
     "batch_scores = Batch_GOF_Scores(scoreList)\n",
     "\n",
     "# Run the GoF scoring batch in parallel\n",
-    "calculated_batch_scores = batch_scores.run(parallel = True, \\\n",
-    "                                           n_cores = 4, \\\n",
-    "                                           options = dict(fmin=1.0, fmax=15.0),\n",
-    "                                          )\n",
+    "calculated_batch_scores = batch_scores.run(\n",
+    "    parallel=True,\n",
+    "    n_cores=4,\n",
+    "    options=dict(fmin=1.0, fmax=15.0),\n",
+    ")\n",
     "\n",
     "# We can look at the results of each GoF score object\n",
     "for score in calculated_batch_scores:\n",
