--- a/examples/Pipeline_06_Batch_Simulation.ipynb
+++ b/examples/Pipeline_06_Batch_Simulation.ipynb
@@ -104,10 +104,10 @@
    ],
    "source": [
     "lin_results = batch_lin_sim.run(\n",
-    "    parallel=True, \n",
-    "    n_cores=2, \n",
+    "    parallel=True,\n",
+    "    n_cores=2,\n",
     "    verbose=True,\n",
-    "    options=dict(every_layer=False, show_fig=True, verbose=False)\n",
+    "    options=dict(every_layer=False, show_fig=True, verbose=False),\n",
     ")"
    ]
   },
@@ -205,10 +205,10 @@
    ],
    "source": [
     "equiv_results = batch_equiv_sim.run(\n",
-    "    parallel=True, \n",
-    "    n_cores=2, \n",
+    "    parallel=True,\n",
+    "    n_cores=2,\n",
     "    verbose=True,\n",
-    "    options=dict(verbose=False, show_fig=False)\n",
+    "    options=dict(verbose=False, show_fig=False),\n",
     ");"
    ]
   },
@@ -469,12 +469,12 @@
    ],
    "source": [
     "if __name__ == '__main__':\n",
-    "  lin_results = batch_lin_sim.run(\n",
-    "      parallel=True, \n",
-    "      n_cores=2, \n",
-    "      verbose=True,\n",
-    "      options=dict(every_layer=False, show_fig=True, verbose=False)\n",
-    "  )"
+    "    lin_results = batch_lin_sim.run(\n",
+    "        parallel=True,\n",
+    "        n_cores=2,\n",
+    "        verbose=True,\n",
+    "        options=dict(every_layer=False, show_fig=True, verbose=False),\n",
+    "    )"
    ]
   },
   {
