--- a/examples/Demo_08_GoF_Scores.ipynb
+++ b/examples/Demo_08_GoF_Scores.ipynb
@@ -212,7 +212,82 @@
       "<HDF5 file \"SSA_GANO_FNO_PySSL.h5\" (mode r)>\n",
       "└── reverse_M7_rrup_12\n",
       "    ├── GANO_FNO (5, 10000)\n",
-      "    └── GANO_PySeismoSoil (5, 10000)\n"
+      "    └── GANO_PySeismoSoil (5, 10000)\n",
+      "\n",
+      "Goodness of Fit Scores\n",
+      "---------------------------------------\n",
+      "Normalized Arias Intensity (S1): -0.044\n",
+      "Normalized Energy Integral (S2): -0.026\n",
+      "      Peak Arias Intensity (S3): -0.266\n",
+      "      Peak Energy Integral (S4):  0.007\n",
+      "          RMS Acceleration (S5): -0.134\n",
+      "              RMS Velocity (S6):  0.003\n",
+      "          RMS Displacement (S7):  0.084\n",
+      "     Spectral Acceleration (S8): -0.172\n",
+      "           Fourier Spectra (S9): -0.489\n",
+      "---------------------------------------\n",
+      "Average Score: -0.115\n",
+      "\n",
+      "\n",
+      "Goodness of Fit Scores\n",
+      "---------------------------------------\n",
+      "Normalized Arias Intensity (S1): -0.014\n",
+      "Normalized Energy Integral (S2): -0.033\n",
+      "      Peak Arias Intensity (S3): -0.219\n",
+      "      Peak Energy Integral (S4):  0.169\n",
+      "          RMS Acceleration (S5): -0.110\n",
+      "              RMS Velocity (S6):  0.084\n",
+      "          RMS Displacement (S7):  0.127\n",
+      "     Spectral Acceleration (S8): -0.208\n",
+      "           Fourier Spectra (S9): -0.415\n",
+      "---------------------------------------\n",
+      "Average Score: -0.069\n",
+      "\n",
+      "\n",
+      "Goodness of Fit Scores\n",
+      "---------------------------------------\n",
+      "Normalized Arias Intensity (S1): -0.010\n",
+      "Normalized Energy Integral (S2): -0.012\n",
+      "      Peak Arias Intensity (S3): -1.100\n",
+      "      Peak Energy Integral (S4): -0.817\n",
+      "          RMS Acceleration (S5): -0.566\n",
+      "              RMS Velocity (S6): -0.417\n",
+      "          RMS Displacement (S7): -0.262\n",
+      "     Spectral Acceleration (S8): -0.549\n",
+      "           Fourier Spectra (S9): -0.659\n",
+      "---------------------------------------\n",
+      "Average Score: -0.488\n",
+      "\n",
+      "\n",
+      "Goodness of Fit Scores\n",
+      "---------------------------------------\n",
+      "Normalized Arias Intensity (S1): -0.084\n",
+      "Normalized Energy Integral (S2): -0.056\n",
+      "      Peak Arias Intensity (S3): -0.694\n",
+      "      Peak Energy Integral (S4): -0.389\n",
+      "          RMS Acceleration (S5): -0.353\n",
+      "              RMS Velocity (S6): -0.196\n",
+      "          RMS Displacement (S7): -0.086\n",
+      "     Spectral Acceleration (S8): -0.425\n",
+      "           Fourier Spectra (S9): -0.773\n",
+      "---------------------------------------\n",
+      "Average Score: -0.340\n",
+      "\n",
+      "\n",
+      "Goodness of Fit Scores\n",
+      "---------------------------------------\n",
+      "Normalized Arias Intensity (S1): -0.057\n",
+      "Normalized Energy Integral (S2): -0.057\n",
+      "      Peak Arias Intensity (S3): -0.730\n",
+      "      Peak Energy Integral (S4): -0.383\n",
+      "          RMS Acceleration (S5): -0.371\n",
+      "              RMS Velocity (S6): -0.193\n",
+      "          RMS Displacement (S7): -0.146\n",
+      "     Spectral Acceleration (S8): -0.230\n",
+      "           Fourier Spectra (S9): -0.824\n",
+      "---------------------------------------\n",
+      "Average Score: -0.333\n",
+      "\n"
      ]
     }
    ],
